@@ -22,10 +22,14 @@ import android.widget.Toast;
 
 import com.google.firebase.auth.FirebaseAuth;
 import com.google.firebase.auth.FirebaseUser;
+import com.google.firebase.database.DataSnapshot;
+import com.google.firebase.database.DatabaseError;
 import com.google.firebase.database.DatabaseReference;
 import com.google.firebase.database.FirebaseDatabase;
+import com.google.firebase.database.ValueEventListener;
 
 import java.util.ArrayList;
+import java.util.List;
 
 public class BodyPage extends AppCompatActivity {
     //add click function
@@ -39,6 +43,7 @@ public class BodyPage extends AppCompatActivity {
     private DatabaseReference bodyDB = db.getReference("Users").child(uid).child("Inventory")
             .child("Body");
 
+    ArrayList<Integer> bodyArray = new ArrayList<>();
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
@@ -46,6 +51,31 @@ public class BodyPage extends AppCompatActivity {
         Bundle bundle = getIntent().getExtras();
         closeButton = findViewById(R.id.closeBodyShop);
         mainGrid = (GridLayout)findViewById(R.id.mainGrid);
+
+        /* Set up inventory array */
+        bodyDB.addValueEventListener(new ValueEventListener() {
+            @Override
+            public void onDataChange(DataSnapshot snapshot) {
+                //Toast.makeText(HatPage.this, snapshot.getValue().toString(), Toast.LENGTH_SHORT).show();
+                // the snapshot provides a generic list holding Objects
+                List array = (List) snapshot.getValue();
+
+                // we then transform those objects into integers for our hat array
+
+                for(int i = 0; i < array.size(); i++){
+                    //Toast.makeText(HatPage.this, "Value is" + Integer.valueOf(array.get(i).toString()), Toast.LENGTH_SHORT).show();
+                    bodyArray.add(Integer.valueOf(array.get(i).toString()));
+                }
+
+            }
+
+            // onCancelled...
+
+            @Override
+            public void onCancelled(DatabaseError databaseError) {
+                // DO nothing
+            }
+        });
         setSingleEvent(mainGrid);
         closeBodyShop(closeButton);
     }
@@ -74,23 +104,29 @@ public class BodyPage extends AppCompatActivity {
                     image.setImageDrawable(getter.getDrawable());
                     TextView getterName = (TextView)((LinearLayout)cardView.getChildAt(0)).getChildAt(1);
 
-                    // Dialog Box to buy body
-                    AlertDialog.Builder builder = new AlertDialog.Builder(BodyPage.this);
-                    builder
-                            .setTitle("Buy " + getterName.getText().toString() + "?")
-                            //.setMessage("Are you sure?")
-                            .setView(image)
-                            // Line below creates icon for dialog box in upper left corner
-                            .setIcon(image.getDrawable())
-                            .setPositiveButton("Yes", new DialogInterface.OnClickListener() {
-                                public void onClick(DialogInterface dialog, int which) {
-                                    //Yes button clicked, do something
-                                    Toast.makeText(BodyPage.this, "Bought body at index" + finalI, Toast.LENGTH_SHORT).show();
-                                    bodyDB.child(new Integer(finalI).toString()).setValue(1);
-                                }
-                            })
-                            .setNegativeButton("No", null)
-                            .show();
+                    if(Integer.valueOf(bodyArray.get(finalI)) == 0){
+                        // Dialog Box to buy hat
+                        AlertDialog.Builder builder = new AlertDialog.Builder(BodyPage.this);
+                        builder
+                                .setTitle("Buy " + getterName.getText().toString() + "?")
+                                //.setMessage("Are you sure?")
+                                .setView(image)
+                                // Line below creates icon for dialog box in upper left corner
+                                .setIcon(image.getDrawable())
+                                .setPositiveButton("Yes", new DialogInterface.OnClickListener() {
+                                    public void onClick(DialogInterface dialog, int which) {
+                                        //Yes button clicked, do something
+                                        Toast.makeText(BodyPage.this, "Looking good!", Toast.LENGTH_SHORT).show();
+                                        bodyDB.child(Integer.valueOf(finalI).toString()).setValue(1);
+                                        bodyArray.set(finalI,1);
+                                    }
+                                })
+                                .setNegativeButton("No", null)
+                                .show();
+                    }else{
+                        Toast.makeText(BodyPage.this, "Already purchased this item", Toast.LENGTH_SHORT).show();
+                    }
+
                 }
             });
 
